--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width = device-width ,initial-scale=1.0">
+    <meta name="viewport" content="width = device-width">
     <title>2048demo</title>
     <link rel="stylesheet" type="text/css" href="2048.css" />
     <script type="text/javascript" src="2048.js"></script>
