--- a/2048 demo/2048demo.html
+++ b/2048 demo/2048demo.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <title>2048 Demo</title>
     <link rel="stylesheet"  href="2048.css">
-    <script src="2048.js" type="text/javascript"></script>
+    <script src="mobile_touch_function.js" type="text/javascript"></script>
+    <script src="2048main.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
