--- a/2048 demo/2048demo.html
+++ b/2048 demo/2048demo.html
@@ -24,13 +24,13 @@
         <div id="change-input">
             <form>
                 <label for="up">up</label>
-                <input id="up" type="text" value="">
+                <input id="up" type="text" value="W">
                 <label for="down">down</label>
-                <input id="down" type="text" value="">
+                <input id="down" type="text" value="S">
                 <label for="left">left</label>
-                <input id="left" type="text" value="">
+                <input id="left" type="text" value="A">
                 <label for="right">right</label>
-                <input id="right" type="text" value="">
+                <input id="right" type="text" value="D">
             </form>
         </div>
         <div id="game-over-message">
