--- a/demos/index.html
+++ b/demos/index.html
@@ -61,6 +61,8 @@
         <li><a href="轮播图.html">轮播图</a></li>
         <li><a href="transform3D旋转相册.html">旋转相册</a></li>
         <li><a href="HTML5图片上传预览.html">图片上传预览</a></li>
+        <li><a href="评分功能.html">评分功能</a></li>
+        <li><a href="用键盘控制方块.html">用键盘控制方块</a></li>
     </ul>
 </nav>
 
