--- a/demos/index.html
+++ b/demos/index.html
@@ -63,6 +63,7 @@
         <li><a href="HTML5图片上传预览.html">图片上传预览</a></li>
         <li><a href="评分功能.html">评分功能</a></li>
         <li><a href="用键盘控制方块.html">用键盘控制方块</a></li>
+        <li><a href="评分功能.html">评分功能</a></li>
     </ul>
 </nav>
 
