--- a/demos/index.html
+++ b/demos/index.html
@@ -51,19 +51,19 @@
 <body>
 <nav id="container">
     <ul>
-        <li><a href="多级导航.html">多级导航</a></li>
-        <li><a href="拖拽.html">拖拽</a>
+        <li><a href="多级导航/多级导航.html">多级导航</a></li>
+        <li><a href="拖拽/拖拽.html">拖拽</a>
             <ul>
-                <li><a href="模拟滚动条拖拽.html">模拟滚动条拖拽</a></li>
+                <li><a href="拖拽/模拟滚动条拖拽.html">模拟滚动条拖拽</a></li>
             </ul>
         </li>
-        <li><a href="计时器.html">计时器</a></li>
-        <li><a href="轮播图.html">轮播图</a></li>
-        <li><a href="transform3D旋转相册.html">旋转相册</a></li>
-        <li><a href="HTML5图片上传预览.html">图片上传预览</a></li>
-        <li><a href="评分功能.html">评分功能</a></li>
-        <li><a href="用键盘控制方块.html">用键盘控制方块</a></li>
-        <li><a href="评分功能.html">评分功能</a></li>
+        <li><a href="计时器/计时器.html">计时器</a></li>
+        <li><a href="轮播图/轮播图.html">轮播图</a></li>
+        <li><a href="transform3D旋转相册/transform3D旋转相册.html">旋转相册</a></li>
+        <li><a href="HTML5图片上传预览/HTML5图片上传预览.html">图片上传预览</a></li>
+        <li><a href="评分功能/评分功能.html">评分功能</a></li>
+        <li><a href="用键盘控制方块/用键盘控制方块.html">用键盘控制方块</a></li>
+        <li><a href="评分功能/评分功能.html">评分功能</a></li>
     </ul>
 </nav>
 
