--- a/demos/轮播图/轮播图.html
+++ b/demos/轮播图/轮播图.html
@@ -19,9 +19,9 @@
 <body>
 <div id="container">
     <ul id="imgs">
-        <li><img src="images/01.jpg"></li>
-        <li><img src="images/02.jpg"></li>
-        <li><img src="images/03.jpg"></li>
+        <li><img src="../images/01.jpg"></li>
+        <li><img src="../images/02.jpg"></li>
+        <li><img src="../images/03.jpg"></li>
     </ul>
     <ul id="num">
         <li class="a"></li>
