--- a/demos/transform3D旋转相册/transform3D旋转相册.html
+++ b/demos/transform3D旋转相册/transform3D旋转相册.html
@@ -52,15 +52,15 @@
 <body>
 <div class="stage">
     <ul id="container">
-        <li><img src="images/01.jpg" alt="" /></li>
-        <li><img src="images/02.jpg" alt="" /></li>
-        <li><img src="images/03.jpg" alt="" /></li>
-        <li><img src="images/04.jpg" alt="" /></li>
-        <li><img src="images/05.jpg" alt="" /></li>
-        <li><img src="images/06.jpg" alt="" /></li>
-        <li><img src="images/07.jpg" alt="" /></li>
-        <li><img src="images/08.jpg" alt="" /></li>
-        <li><img src="images/09.jpg" alt="" /></li>
+        <li><img src="../images/01.jpg" alt="" /></li>
+        <li><img src="../images/02.jpg" alt="" /></li>
+        <li><img src="../images/03.jpg" alt="" /></li>
+        <li><img src="../images/04.jpg" alt="" /></li>
+        <li><img src="../images/05.jpg" alt="" /></li>
+        <li><img src="../images/06.jpg" alt="" /></li>
+        <li><img src="../images/07.jpg" alt="" /></li>
+        <li><img src="../images/08.jpg" alt="" /></li>
+        <li><img src="../images/09.jpg" alt="" /></li>
     </ul>
 </div>
 </body>
