修改了考试时间

--- a/demos/考试安排/index.html
+++ b/demos/考试安排/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>考试安排</title>
+    <style>
+        h2{
+            color: #85f559;
+        }
+        table {
+            border-collapse: collapse;
+        }
+
+        thead tr{
+            background-color: #9f573e;
+        }
+
+        tbody tr:nth-child(2n) {
+            background-color: #99D3F5;
+        }
+
+        tbody tr:nth-child(2n-1){
+            background-color: #DEFCC3;
+        }
+    </style>
 </head>
 <body>
-<table border="1px" cellpadding="5px">
+<table border cellpadding="5px">
     <caption>
         <h2>春季考试安排</h2>
     </caption>
@@ -30,7 +50,7 @@
     </tr>
     <tr>
         <td>微波技术基础</td>
-        <td>14周星期7下午 —————— 5月14号PM</td>
+        <td>14周星期7下午 —————— 5月21号PM</td>
         <td>东九A216</td>
     </tr>
     <tr>
