添加了拖拽上传

--- a/demos/HTML5拖拽上传/index.html
+++ b/demos/HTML5拖拽上传/index.html
@@ -11,7 +11,7 @@
 </header>
 <section id="single-file-upload-container">
     <header>
-        <h2>单文件拖拽上传</h2>
+        <h2>文件拖拽上传(在控制台可以看到文件名字)</h2>
     </header>
     <div id="single-file-upload">
         <img alt="Feature image"
@@ -21,12 +21,13 @@
              width="204">
         <h2>拖拽文件上传</h2>
         <p class="file-upload-choose">
-            <input type="file" class="manual-file-chooser">
+            <input type="file" class="manual-file-chooser" multiple>
             Or
             <a class="manual-file-chooser-text" href="#">选择你的文件</a>
         </p>
     </div>
 </section>
+
 <script src="main.js"></script>
 </body>
 </html>
