新增博客gh-pages的用法

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: your awesome title
-page-title: your awesome page-title.
-home-title: your awesome home-title.
-description: description
+title: alex的博客小站
+page-title: alex的博客小站
+home-title: alex的博客小站
+description: 记录学习历程
 ---
 
 {% include header.html %}
